--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -130,10 +130,10 @@ focus-exclude = [];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
-    "100:class_g = 'discord' && focused",
-    "90:class_g	  = 'discord' && !focused",
+    "90:class_g = 'discord' && focused",
+    "80:class_g	  = 'discord' && !focused",
     "100:class_g = 'firefox' && focused",
-    "98:class_g = 'firefox' && !focused",
+    "100:class_g = 'firefox' && !focused",
     "90:class_g = 'dmenu'",
 ]
 
@@ -202,7 +202,7 @@ backend = "glx"
 vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
-dbus = false;
+#dbus = false;
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
@@ -230,7 +230,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 1;
+refresh-rate = 60;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
@@ -343,8 +343,8 @@ transparent-clipping = false;
 # If using the "TRACE" log level, it's better to log into a file
 # using *--log-file*, since it can generate a huge stream of logs.
 #
-log-level = "debug";
-#log-level = "warn";
+#log-level = "debug";
+log-level = "warn";
 
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr.
@@ -355,7 +355,7 @@ log-level = "debug";
 # log-file = "/path/to/your/log/file"
 
 # Show all X errors (for debugging)
-# show-all-xerrors = false
+#show-all-xerrors = true;
 
 # Write process ID to a file.
 # write-pid-path = "/path/to/your/log/file"
