--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -134,7 +134,9 @@ opacity-rule = [
     "80:class_g	  = 'discord' && !focused",
     "100:class_g = 'firefox' && focused",
     "100:class_g = 'firefox' && !focused",
-    "90:class_g = 'dmenu'",
+    "90:class_g *?= 'dmenu'",
+    "85:class_g *?= 'alacritty' && focused",
+    "90:class_g *?= 'alacritty' && !focused",
 ]
 
 
