--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -137,6 +137,7 @@ opacity-rule = [
     "90:class_g *?= 'dmenu'",
     "85:class_g *?= 'alacritty' && focused",
     "90:class_g *?= 'alacritty' && !focused",
+    "95:class_g *?= 'polybar'",
 ]
 
 
