--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -7,8 +7,8 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
-shadow = true;
+shadow = false
+# shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -129,16 +129,32 @@ focus-exclude = [];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = [
-    "90:class_g = 'discord' && focused",
-    "80:class_g	  = 'discord' && !focused",
-    "100:class_g = 'firefox' && focused",
-    "100:class_g = 'firefox' && !focused",
-    "90:class_g *?= 'dmenu'",
-    "85:class_g *?= 'alacritty' && focused",
-    "90:class_g *?= 'alacritty' && !focused",
-    "95:class_g *?= 'polybar'",
-]
+#opacity-rule = [
+#    "90:class_g = 'discord' && focused",
+#    "80:class_g	  = 'discord' && !focused",
+#    "100:class_g = 'firefox' && focused",
+#    "100:class_g = 'firefox' && !focused",
+#    "90:class_g *?= 'dmenu'",
+#    "85:class_g *?= 'alacritty' && focused",
+#    "90:class_g *?= 'alacritty' && !focused",
+#    "95:class_g *?= 'polybar'",
+#]
+
+#################################
+#           Corners             #
+#################################
+
+
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
+corner-radius = 50
+
+# Exclude conditions for rounded corners.
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
+];
 
 
 #################################
@@ -147,28 +163,28 @@ opacity-rule = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "dual_kawase";
-blur-strength = 5;
-blur-size = 10
+##blur-method = "dual_kawase";
+##blur-strength = 5;
+##blur-size = 10
 #
-blur-deviation = 5.0;
+#blur-deviation = 5.0;
 #
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-blur-background = false;
+##blur-background = false;
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
 #    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-blur-background-frame = true;
+##blur-background-frame = true;
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-blur-background-fixed = false;
+##blur-background-fixed = false;
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -197,8 +213,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "glx"
-#backend = "xrender";
+#backend = "glx"
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
@@ -222,7 +238,6 @@ mark-ovredir-focused = true;
 #
 # detect-rounded-corners = false
 detect-rounded-corners = true;
-
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
 #
