--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -96,7 +96,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Noto Sans Mono
+    family: Source Code Pro
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -173,7 +173,7 @@ font:
 colors:
   # Default colors
   primary:
-    background: '#23252e'
+    background: '#222222'
     foreground: '#eaeaea'
 
     # Bright and dim foreground colors
@@ -285,7 +285,7 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
+  background_opacity: 1.0
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
