--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -28,9 +28,9 @@ secondary = #eeeeee
 alert = #bd2c40
 
 [bar/mybar]
-#monitor = ${env:MONITOR:HDMI-1}
+#monitor = ${env:MONITOR:DVI-D-0}
 width = 100%
-height = 27
+height = 25
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 6.0
@@ -39,7 +39,7 @@ fixed-center = false
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3
+line-size = 2
 line-color = #f00
 
 border-size = 4
@@ -51,10 +51,17 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = Noto Sans CJK JP
-font-1 = fixed:pixelsize=10;1
-font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-3 = siji:pixelsize=10;1
+font-0 = "UbuntuMono Nerd Font:size=10;2"
+font-1 = "UbuntuMono Nerd Font:size=16;3"
+font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
+font-3 = "Font Awesome 5 Free:style=Solid:pixelsize=8;1"
+font-4 = "Font Awesome 5 Brands:pixelsize=8;1"
+font-5 = Noto Sans CJK JP
+font-6 = Nerd Pro
+;font-7 = fixed:pixelsize=10;1
+;font-8 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-7 = "Wuncon Siji:pixelsize=10;1"
+;font-10 = siji:pixelsize=10;1
 
 modules-left = dwm
 modules-center = 
@@ -81,9 +88,9 @@ cursor-scroll = ns-resize
 
 
 [bar/mybar2]
-monitor = ${env:MONITOR:VGA-0}
+monitor = ${env:MONITOR:HDMI-0}
 width = 100%
-height = 27
+height = 25
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 6.0
@@ -104,10 +111,18 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = Noto Sans CJK JP
-font-1 = fixed:pixelsize=10;1
-font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-3 = siji:pixelsize=10;1
+font-0 = "UbuntuMono Nerd Font:size=11;2"
+font-1 = "UbuntuMono Nerd Font:size=16;3"
+font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
+font-3 = "Font Awesome 5 Free:style=Solid:pixelsize=8;1"
+font-4 = "Font Awesome 5 Brands:pixelsize=8;1"
+font-5 = Noto Sans CJK JP
+font-6 = Nerd Pro
+;font-7 = Verdana
+;font-7 = fixed:pixelsize=10;1
+;font-8 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-7 = "Wuncon Siji:pixelsize=10;1""
+;font-10 = siji:pixelsize=10;1
 
 modules-left = dwm
 modules-center = 
@@ -133,7 +148,8 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title%
+;label = %title:0:30:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -285,7 +301,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "cpu: "
+format-prefix = "CPU: "
 format-prefix-foreground = ${colors.foreground-alt}
 #format-underline = #1aaba0
 label = %percentage:2%%
@@ -293,10 +309,12 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "mem: "
+format-prefix = "RAM: "
 format-prefix-foreground = ${colors.foreground-alt}
 #format-underline = #1aaba0
-label = %percentage_used%%
+#label = %percentage_used%%
+label = %gb_used%
+
 
 [module/wlan]
 type = internal/network
@@ -340,7 +358,7 @@ format-disconnected =
 type = internal/date
 interval = 5
 
-date = %A %b %d
+date = %a %b %d
 #date-alt = " %Y-%m-%d"
 
 time = %H:%M
@@ -358,7 +376,7 @@ type = internal/pulseaudio
 format-volume = <label-volume> 
 format-underline = #1aaba0
 #<bar-volume>
-format-volume-prefix = "vol: "
+format-volume-prefix = "VOL: "
 format-volume-prefix-foreground = ${colors.foreground-alt}
 label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
